--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "markdown-it": "^14.0.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
